src/services/kubernetes/bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: bot
  template:
    metadata:
      labels:
        component: bot
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: nlp-key
      - name: symphony-cloud-key
        secret:
          secretName: symphony-key
      containers:
        - name: bot
          image: reactivetradercloud/bot:${BUILD_VERSION}
          volumeMounts:
          - name: google-cloud-key
            mountPath: /var/secrets/google
          - name:  symphony-cloud-key
            mountPath: /var/secrets/symphony
