src/services/kubernetes/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: broker
  template:
    metadata:
      labels:
        component: broker
    spec:
      containers:
        - name: broker
          image: ${DOCKER_USER}/broker:${BUILD_VERSION}
          ports:
            - containerPort: 5672
            - containerPort: 15672
            - containerPort: 15674
