src/services/kubernetes/eventstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventstore-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: eventstore
  template:
    metadata:
      labels:
        component: eventstore
    spec:
      containers:
        - name: eventstore
          image: ${DOCKER_USER}/eventstore:${BUILD_VERSION}
          ports:
            - containerPort: 1113
            - containerPort: 2113
