src/services/kubernetes/pricehistory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricehistory-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: pricehistory
  template:
    metadata:
      labels:
        component: pricehistory
    spec:
      containers:
        - name: pricehistory
          image: ${DOCKER_USER}/pricehistory:${BUILD_VERSION}
