src/services/kubernetes/pricing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: pricing
  template:
    metadata:
      labels:
        component: pricing
    spec:
      containers:
        - name: pricing
          image: ${DOCKER_USER}/servers:${BUILD_VERSION}
          command:
            ['sh', '-c', 'dotnet ./Adaptive.ReactiveTrader.Server.Pricing.dll config.prod.json']
