src/services/kubernetes/referencedataread-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: referencedataread-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: referencedataread
  template:
    metadata:
      labels:
        component: referencedataread
    spec:
      containers:
        - name: referencedataread
          image: ${DOCKER_USER}/servers:${BUILD_VERSION}
          command:
            [
              'sh',
              '-c',
              'dotnet ./Adaptive.ReactiveTrader.Server.ReferenceDataRead.dll config.prod.json',
            ]
