src/services/kubernetes/broker-service.yaml
 apiVersion: v1
kind: Service
metadata:
  name: broker
spec:
  type: ClusterIP
  selector:
    component: broker
  ports:
    - port: 5672
      targetPort: 5672
    - port: 15672
      targetPort: 15672
