src/services/kubernetes/openfinconfig-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openfinconfig
spec:
  type: ClusterIP
  selector:
    component: openfinconfig
  ports:
    - port: 8080
      targetPort: 8080
