src/services/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    name: web
    public: 'true'
spec:
  selector:
    component: web
  ports:
    - name: web
      port: 80
      targetPort: 80
  type: NodePort
