src/services/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: reactive-trader-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: web-${DEPLOY_ENV}.adaptivecluster.com
      http:
        paths:
          - path:
            backend:
              serviceName: web
              servicePort: 80
